# TurfTrack

./: .gitignore  Dockerfile.backend  OVERALL_PLAN.md  docker-compose.yml
backend/: _test.ipynb  pyproject.toml
backend/src/: config.py  database.py  main.py  models.py  utils.py
backend/src/services/: weather.py
backend/tests/: test_weather.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/charts/: DailyTemperatureChart.tsx  DollarSpotChart.tsx  GrowthPotentialChart.tsx
frontend/src/hooks/: useWeatherData.tsx
frontend/src/services/: api.tsx
frontend/src/types/: weather.tsx
